--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,7 +1,7 @@
 <view class="index">
   <view class="index-hd">
     <image class="index-logo" src="/images/logo.png"></image>
-    <view class="index-desc">以下将展示我封装的组件，具体属性参数详见 小程序开发文档</view>
+    <view class="index-desc">以下将展示我封装的组件，具体属性参数详见 小程序对应组件注释</view>
   </view>
     <view class="index-bd">
         <view class="kind-list">
